overflow and other bug fixed

--- a/frontend/src/pages/main/Mainpage.module.css
+++ b/frontend/src/pages/main/Mainpage.module.css
@@ -1,3 +1,6 @@
+.overFlowHide{
+    overflow-x: hidden;
+}
 .explore{
     height: 16vh;
     display: flex;
